// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbt-import-Better BibTeX.011-sentencecase=on+guess+caseprotection=as-needed.bib 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "Myungsook",
            "lastName": "Klassen",
          },
          Object {
            "firstName": "Nyunsu",
            "lastName": "Kim",
          },
          Object {
            "firstName": "Wei Ming",
            "lastName": "Liu",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Klassen, Myungsook",
          "Kim, Nyunsu",
          "Liu, Wei Ming",
        ],
        "bibsource": Array [
          "DBLP, http://dblp.uni-trier.de",
        ],
        "booktitle": Array [
          "CATA",
        ],
        "crossref": Array [
          "DBLP:conf/cata/2010",
        ],
        "groups": Array [
          "klasyfikacja",
        ],
        "note": Array [
          "svm liniowe najlepsze",
        ],
        "owner": Array [
          "sstudent",
        ],
        "pages": Array [
          "25-30",
        ],
        "timestamp": Array [
          "2011.03.22",
        ],
        "title": Array [
          "Empirical study of support vector machine kernels with applications to microarray data",
        ],
        "year": Array [
          "2010",
        ],
      },
      "key": "Klassen2010",
      "type": "inproceedings",
    },
  ],
  "errors": Array [],
  "groups": Object {
    "fileDirectory": null,
    "groups": Object {},
    "root": Array [],
    "version": null,
  },
  "preamble": Array [],
  "strings": Object {},
}
`;

exports[`import Better BibTeX.011.bib 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "Myungsook",
            "lastName": "Klassen",
          },
          Object {
            "firstName": "Nyunsu",
            "lastName": "Kim",
          },
          Object {
            "firstName": "Wei Ming",
            "lastName": "Liu",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Klassen, Myungsook",
          "Kim, Nyunsu",
          "Liu, Wei Ming",
        ],
        "bibsource": Array [
          "DBLP, http://dblp.uni-trier.de",
        ],
        "booktitle": Array [
          "CATA",
        ],
        "crossref": Array [
          "DBLP:conf/cata/2010",
        ],
        "groups": Array [
          "klasyfikacja",
        ],
        "note": Array [
          "svm liniowe najlepsze",
        ],
        "owner": Array [
          "sstudent",
        ],
        "pages": Array [
          "25-30",
        ],
        "timestamp": Array [
          "2011.03.22",
        ],
        "title": Array [
          "Empirical study of support vector machine kernels with applications to microarray data",
        ],
        "year": Array [
          "2010",
        ],
      },
      "key": "Klassen2010",
      "type": "inproceedings",
    },
  ],
  "errors": Array [],
  "preamble": Array [],
  "strings": Object {},
}
`;
